[[changelog-client]]
== Release notes

[discrete]
=== 9.0.0

[discrete]
==== Breaking changes

[discrete]
===== Drop support for deprecated `body` parameter

In 8.0, the top-level `body` parameter that was available on all API functions <<remove-body-key,was deprecated>>. In 9.0 this property is completely removed.

[discrete]
=== 8.17.0

[discrete]
==== Features

[discrete]
===== Support for Elasticsearch `v8.17`

You can find all the API changes
https://www.elastic.co/guide/en/elasticsearch/reference/8.17/release-notes-8.17.0.html[here].

[discrete]
=== 8.16.3

[discrete]
==== Fixes

[discrete]
===== Improved support for Elasticsearch `v8.16`

Updated TypeScript types based on fixes and improvements to the Elasticsearch specification.

[discrete]
=== 8.16.2

[discrete]
==== Fixes

[discrete]
===== Improved support for Elasticsearch `v8.16`

Updated TypeScript types based on fixes and improvements to the Elasticsearch specification.

[discrete]
===== Drop testing artifacts from npm package

Tap, the unit testing tool used by this project, was recently upgraded and started writing to a `.tap` directory. Since tests are run prior to an `npm publish` in CI, this directory was being included in the published package and bloating its size.

[discrete]
=== 8.16.1

[discrete]
==== Fixes

[discrete]
===== Fix ECMAScript imports

Fixed package configuration to correctly support native ECMAScript `import` syntax.

[discrete]
=== 8.16.0

[discrete]
==== Features

[discrete]
===== Support for Elasticsearch `v8.16`

You can find all the API changes
https://www.elastic.co/guide/en/elasticsearch/reference/8.16/release-notes-8.16.0.html[here].

[discrete]
===== Support Apache Arrow in ES|QL helper

The ES|QL helper can now return results as an Apache Arrow `Table` or `RecordBatchReader`, which enables high-performance calculations on ES|QL results, even if the response data is larger than the system's available memory. See <<esql-helper>> for more information.

[discrete]