@@ -57,7 +57,7 @@
   },
   "devDependencies": {
     "@elastic/request-converter": "8.17.0",
-    "@sinonjs/fake-timers": "github:sinonjs/fake-timers#48f089f",
+    "@sinonjs/fake-timers": "14.0.0",
     "@types/debug": "4.1.12",
     "@types/ms": "0.7.34",
     "@types/node": "22.10.7",
@@ -89,7 +89,7 @@
     "zx": "7.2.3"
   },
   "dependencies": {
-    "@elastic/transport": "^8.9.1",
+    "@elastic/transport": "9.0.0-alpha.1",
     "apache-arrow": "^18.0.0",
     "tslib": "^2.4.0"
   },
